# oewn-gender-analysis

./: .gitignore  gendered_changes.yaml  gendered_changes2.yaml  gendered_words.csv  gendered_words_annotated.csv  gendered_words_female.csv  gendered_words_female_annotated.csv  gendered_words_male.csv  gendered_words_male_annotated.csv  geneder_words_out  he_pronouns.csv  now_ungendered.csv  pronoun_changes.csv  pronoun_changes.yaml  pronoun_changes_checked.csv  pyproject.toml  she_pronouns.csv
oewn_gender_analysis/: count_changes.py  definition_length.py  extract_he_defns.py  gender_diff.py  gendered_words.py  gendered_words_stage2.py  implement_gendered_word_changes.py  implement_pronoun_changes.py
