[tool.poetry]
name = "oewn-gender-analysis"
version = "0.1.0"
description = ""
authors = ["John P. McCrae <john@mccr.ae>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
wn = "^0.9.5"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
